Formatting review and bugcheck
Need to fix problems with scaling on larger displays, the navbar elements, and also fix scrollbars appearing in strange places.

--- a/src/Message.css
+++ b/src/Message.css
@@ -40,7 +40,7 @@
     position: relative;
     right: -70px;
     top: -15px;
-    min-width:auto;
+    min-width: auto;
 }
 
 .login {
@@ -57,6 +57,7 @@ iframe {
     border: 0;
 }
 
-.fileimage, .filevideo {
+.fileimage,
+.filevideo {
     max-height: 250px;
 }
