--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,36 +3,33 @@
  *    Author: Lachlan Paul, 2023
  */
 
-.navbar{
-    position:relative;
+.navbar {
+    position: relative;
     background-color: rgba(10, 10, 15, 0.233);
     background-position: 100%;
-    height:150px;
+    height: 150px;
 }
 
-.navbar-brand{
-    position:absolute;
+.navbar-brand {
+    position: absolute;
     border-radius: 50%;
-    top:23px;
+    top: 23px;
 }
 
-.navbar-name{
+.navbar-name {
     position: relative;
-    right:-105px;
+    right: -105px;
     top: 8px;
 }
 
-.sobtn{
+.sobtn {
     position: relative;
     color: rgb(190, 185, 185);
     background-color: rgba(139, 139, 146, 0.233);
     border: 0;
     outline: none;
-    top:10px;
-    right:-106px;
 }
 
-.joke{
-    position: absolute;
-    right:50px;
+.joke {
+    right: 50px;
 }
